gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-const_generics-ptr.rs
struct ConstFn<const F: fn()>;
// { dg-error ".E0658." "" { target *-*-* } .-1 }
// { dg-error ".E0658." "" { target *-*-* } .-2 }

struct ConstPtr<const P: *const u32>;
// { dg-error ".E0658." "" { target *-*-* } .-1 }
// { dg-error ".E0658." "" { target *-*-* } .-2 }

fn main() {}

